--- a/wiki.html
+++ b/wiki.html
@@ -78,10 +78,14 @@
     .dropdown-content a { padding: 0.5rem 1rem; white-space: nowrap; }
     .dropdown-content a:hover { background: rgba(255,255,255,0.05); }
 
+    /* Main content container */
     main.container {
-      max-width: 1200px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+      width: 100%;
+      height: calc(100vh - 70px); /* subtract header height */
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
     }
 
     h1.page-title {
@@ -90,15 +94,15 @@
       text-align: center;
     }
 
-    /* Embed iframe */
+    /* Full-size iframe */
     iframe.wiki-frame {
+      flex: 1; /* fills all remaining space in container */
       width: 100%;
-      height: 90vh;
       border: none;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+      border-radius: 0; /* optional: remove radius to fit fully */
       background: #0b0f14;
     }
+
 
     footer {
       color: #9fb3c8;
@@ -154,9 +158,9 @@
 
   <!-- Main content -->
   <main class="container">
-    <h1 class="page-title">Origins Rebirth Wiki</h1>
-    <iframe class="wiki-frame" src="https://wiki.originsrebirth.com/docs" title="Origins Rebirth Wiki"></iframe>
+        <iframe class="wiki-frame" src="https://wiki.originsrebirth.com/docs" title="Origins Rebirth Wiki"></iframe>
   </main>
+
 
   <!-- ✦ FOOTER -->
   <footer class="site-footer">
