Edited the code as Im still lazy :(

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="footer-column">
       <h4>Connect</h4>
       <ul class="social-links">
-        <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
+        <li><a href="https://discord.gg/uJdq9qrRSZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a></li>
         <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
         <li><a href="#"><i class="fab fa-tiktok"></i> TikTok</a></li>
       </ul>
