--- a/wiki.html
+++ b/wiki.html
@@ -82,29 +82,27 @@
     .dropdown-content a { padding: 0.5rem 1rem; white-space: nowrap; }
     .dropdown-content a:hover { background: rgba(255,255,255,0.05); }
 
-    /* Main content container */
-    main.container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      width: 100vw; /* Full viewport width */
+    body, html {
       margin: 0;
       padding: 0;
+      height: 100%;
+      background: #0b0f14;
     }
 
-    h1.page-title {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      text-align: center;
+    .wiki-container {
+      width: 100%;
+      height: 100vh; /* full viewport height */
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      overflow: hidden;
     }
 
-    /* Full-size iframe */
-    iframe.wiki-frame {
+    .wiki-container iframe {
       flex: 1;
       width: 100%;
       height: 100%;
       border: none;
-      display: block;
     }
 
     footer {
