--- a/wiki.html
+++ b/wiki.html
@@ -9,9 +9,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     html, body {
-      width: 100%;
       overflow-x: hidden;
+    }
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #0b0f14;
     }   
     body {
       margin: 0;
@@ -82,27 +92,23 @@
     .dropdown-content a { padding: 0.5rem 1rem; white-space: nowrap; }
     .dropdown-content a:hover { background: rgba(255,255,255,0.05); }
 
-    body, html {
+    main.container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      width: 100vw;
       margin: 0;
       padding: 0;
-      height: 100%;
-      background: #0b0f14;
+      box-sizing: border-box;
     }
 
-    .wiki-container {
-      width: 100%;
-      height: 100vh; /* full viewport height */
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
-      overflow: hidden;
-    }
-
-    .wiki-container iframe {
+    iframe.wiki-frame {
       flex: 1;
       width: 100%;
       height: 100%;
       border: none;
+      display: block;
+      box-sizing: border-box;
     }
 
     footer {
