--- a/wiki.html
+++ b/wiki.html
@@ -97,6 +97,7 @@
       display: flex;
       flex-direction: column;
       width: 100vw;
+      height: 250vh;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
