Edited the cause :P

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>Your Epic Adventure Begins</h2>
   </section>
 
-  <main class="container">
+  <main class="container home-sections">
     <section class="glass-box intro">
       <h2>Welcome to Origins Rebirth</h2>
       <p>Explore a vibrant Minecraft server powered by custom Origins and plugins. Our server supports both Java and Bedrock editions, offering a seamless cross-platform experience.</p>
