--- a/index.html
+++ b/index.html
@@ -126,9 +126,15 @@
 
     <!-- ✦ SCRIPT (nav toggle for mobile) -->
   <script>
-  function toggleMenu() {
-    document.getElementById("navMenu").classList.toggle("show");
-  }
+    const dropdowns = document.querySelectorAll('.dropdown');
+
+    dropdowns.forEach(drop => {
+      const btn = drop.querySelector('.dropbtn');
+      btn.addEventListener('click', e => {
+        e.preventDefault();  // prevent default link navigation
+        drop.classList.toggle('active');
+      });
+    });
   </script>
   <script src="js/script.js"></script>
 </body>
