--- a/origins.html
+++ b/origins.html
@@ -363,14 +363,17 @@
     <h1 class="site-title">Origins Rebirth</h1>
 
     <!-- Navigation -->
-    <nav class="nav-links">
+    <button class="menu-toggle" aria-label="Menu" aria-expanded="false">
+      <span class="hamburger" aria-hidden="true"></span>
+    </button>
+    <nav class="nav-links" id="navMenu" aria-label="Main navigation">
       <a href="index.html">Home</a>
 
       <div class="dropdown">
-        <a href="about.html">About ▾</a>
+        <a href="about.html" class="dropbtn">About ▾</a>
         <div class="dropdown-content">
           <a href="wiki.html">Wiki</a>
-          <a href="origins.html" class="active">Origins</a>
+          <a href="origins.html">Origins</a>
           <a href="map.html">Map</a>
         </div>
       </div>
