--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
           <a href="map.html">Map</a>
         </div>
       </div>
-      <a href="rules.html">Rules</a>
+  <a href="rule.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
   </header>
@@ -91,7 +91,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="origins.html">Origins</a></li>
-          <li><a href="rules.html">Rules</a></li>
+    <li><a href="rule.html">Rules</a></li>
           <li><a href="contact.html">Join</a></li>
         </ul>
       </div>
