--- a/map.html
+++ b/map.html
@@ -79,7 +79,7 @@
           <a href="map.html">Map</a>
         </div>
       </div>
-      <a href="rules.html">Rules</a>
+  <a href="rule.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
   </header>
@@ -102,7 +102,7 @@
       <ul>
         <li><a href="about.html">About</a></li>
         <li><a href="origins.html">Origins</a></li>
-        <li><a href="rules.html">Rules</a></li>
+  <li><a href="rule.html">Rules</a></li>
         <li><a href="contact.html">Join</a></li>
       </ul>
     </div>
