--- a/origins.html
+++ b/origins.html
@@ -378,7 +378,7 @@
         </div>
       </div>
 
-      <a href="rules.html">Rules</a>
+  <a href="rule.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
   </header>
@@ -1179,7 +1179,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="origins.html">Origins</a></li>
-          <li><a href="rules.html">Rules</a></li>
+          <li><a href="rule.html">Rules</a></li>
           <li><a href="contact.html">Join</a></li>
         </ul>
       </div>
