--- a/rule.html
+++ b/rule.html
@@ -26,7 +26,7 @@
           <a href="map.html">Map</a>
         </div>
       </div>
-      <a href="rules.html">Rules</a>
+      <a href="rule.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
   </header>
@@ -41,5 +41,6 @@
   <footer>
     <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
