a11y(nav): add skip links, main ids; style hamburger for visibility

--- a/origins.html
+++ b/origins.html
@@ -349,8 +349,8 @@
     <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>
   </div>
   <div class="background-overlay"></div>
-
   <!-- ✦ PAGE CONTENT BELOW -->
+  <a class="skip-link" href="#main-content">Skip to content</a>
   <header class="site-header">
     <!-- Logo -->
     <div class="logo-container">
@@ -403,7 +403,7 @@
     </div>
   </div>
   
-<main class="container">
+<main id="main-content" class="container">
   <section class="grid" id="grid">
 
     <!-- === ALCHEMIST === -->
