--- a/wiki.html
+++ b/wiki.html
@@ -140,8 +140,8 @@
     <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>
   </div>
   <div class="background-overlay"></div>
-
   <!-- ✦ PAGE CONTENT BELOW -->
+  <a class="skip-link" href="#main-content">Skip to content</a>
   <header class="site-header">
     <div class="logo-container">
       <a href="index.html" aria-label="Home">
