--- a/about.html
+++ b/about.html
@@ -60,22 +60,30 @@
   <!-- ✦ MAIN CONTENT -->
   <main id="main-content" class="container">
     <section class="glass-box intro">
-      <h2>About Origins Rebirth</h2>
-      <p>
-        Origins Rebirth is a continuation of the Origins Reborn server, officially named after a careful rebranding and reboot. The server is led by Flyn, an administrator tasked with setup, design, and development, under the guidance of Intravenous (also known as Intra), a veteran player with a record of achievements including managing the large market and holding the all-time top voter status.
-      </p>
-      <p>
-        Since Towny data from the original server has not been released, Origins Rebirth preserves the original Origins worlds, allowing players to explore them in spectator mode and enjoy nostalgia. Plans include providing an archived online map featuring Towny regions from these preserved worlds.
-      </p>
-      <p>
-        The server features new worlds with a world border set at 10,000 blocks, utilizing the same custom world generation as Origins Reborn for the overworld and the End, while the Nether uses Minecraft’s default generation.
-      </p>
-      <p>
-        The existing Origins spawn has been reused with some edits and tweaks due to time constraints, with plans to build a new spawn area in the future. Additionally, an online wiki is in development to preserve and update server information.
-      </p>
-      <p>
-        Moderator roles are divided between KoA and Origins servers to ensure full support without overwhelming any team, while administrators, builders, artists, and developers serve both servers. The server maintains a family-friendly environment with zero tolerance for rule breakers or boundary pushers.
-      </p>
+      <div class="about-layout">
+        <div class="about-text">
+          <h2>About Origins Rebirth</h2>
+          <p>
+            Origins Rebirth is a continuation of the Origins Reborn server, officially named after a careful rebranding and reboot. The server is led by Flyn, an administrator tasked with setup, design, and development, under the guidance of Intravenous (also known as Intra), a veteran player with a record of achievements including managing the large market and holding the all-time top voter status.
+          </p>
+          <p>
+            Since Towny data from the original server has not been released, Origins Rebirth preserves the original Origins worlds, allowing players to explore them in spectator mode and enjoy nostalgia. Plans include providing an archived online map featuring Towny regions from these preserved worlds.
+          </p>
+          <p>
+            The server features new worlds with a world border set at 10,000 blocks, utilizing the same custom world generation as Origins Reborn for the overworld and the End, while the Nether uses Minecraft’s default generation.
+          </p>
+          <p>
+            The existing Origins spawn has been reused with some edits and tweaks due to time constraints, with plans to build a new spawn area in the future. Additionally, an online wiki is in development to preserve and update server information.
+          </p>
+          <p>
+            Moderator roles are divided between KoA and Origins servers to ensure full support without overwhelming any team, while administrators, builders, artists, and developers serve both servers. The server maintains a family-friendly environment with zero tolerance for rule breakers or boundary pushers.
+          </p>
+        </div>
+        <div class="divider" aria-hidden="true"></div>
+        <aside class="discord-widget" aria-label="Discord widget">
+          <iframe title="Origins Rebirth Discord" src="https://discord.com/widget?id=297884707582902273&theme=dark" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </aside>
+      </div>
     </section>
   </main>
 
@@ -91,13 +99,14 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="origins.html">Origins</a></li>
-    <li><a href="rule.html">Rules</a></li>
+          <li><a href="rule.html">Rules</a></li>
           <li><a href="contact.html">Join</a></li>
         </ul>
       </div>
       <div class="footer-column">
         <h4>Connect</h4>
-        <ul cl<a href="https://discord.gg/uJdq9qrRSZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a></li>
+        <ul class="social-links">
+          <li><a href="https://discord.gg/uJdq9qrRSZ" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord"></i> Discord</a></li>
           <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
           <li><a href="#"><i class="fab fa-tiktok"></i> TikTok</a></li>
         </ul>
