--- a/rule.html
+++ b/rule.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Origins Rebirth</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#0b0b0b">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="apple-touch-icon" href="assets/logo.png">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -29,6 +34,10 @@
       <a href="rule.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
+    <div id="pwa-install" class="pwa-install" hidden aria-hidden="true">
+      <button id="installBtn" class="btn-primary">Install App</button>
+      <button id="dismissInstall" class="btn-secondary">Dismiss</button>
+    </div>
   </header>
 
   <main id="main-content">
